--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="flex absolute bottom-48 right-80">
-            <a href="#">
+            <a href="https://www.addu.edu.ph/" target="_blank">
               <button class="bg-[#ff5151] hover:bg-red-500 text-white shadow-lg text-4xl font-bold rounded-full w-20 h-20 -bottom-1 right-2">
                   + </p>
               </button>
