--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   </style>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen bg-[#64a0fb] font-[Roboto]">
+<body class="bg-[#64a0fb] font-[Roboto]">
     <div class="flex justify-center items-center h-screen">
         <div class="flex rounded-lg bg-white shadow-lg">            
             <img class="w-96 object-cover rounded-t-lg md:rounded-l-lg md:rounded-none" src="https://i.ibb.co/kcXTxbG/Isabelle-Labuguen-100.jpg"/>
@@ -40,14 +40,12 @@
             </div>
             
             </div>
-
-            <div class="flex absolute bottom-48 right-80">
-            <a href="https://www.addu.edu.ph/" target="_blank">
-              <button class="bg-[#ff5151] hover:bg-red-500 text-white shadow-lg text-4xl font-bold rounded-full w-20 h-20 -bottom-1 right-2">
+  
+           <a href="https://www.addu.edu.ph/" target="_blank">
+              <button class="bg-[#ff5151] hover:bg-red-500 text-white shadow-lg text-4xl font-bold rounded-full w-20 h-20 -bottom-1 right-2 relative self-center inset-x-[50px] inset-y-[290px]">
                   + </p>
               </button>
             </a>
-            </div>
   
             </div>
         </div>
