--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
         <div class="flex rounded-lg bg-white shadow-lg">            
             <img class="w-96 object-cover rounded-t-lg md:rounded-l-lg md:rounded-none" src="https://i.ibb.co/kcXTxbG/Isabelle-Labuguen-100.jpg"/>
 
-            <div class="flex flex-col p-10 text-center">
+            <div class="flex flex-col p-10 -mr-20 text-center">
                 
                 <h5 class="text-zinc-700 text-3xl font-bold mt-2 mb-2"> Isabelle Labuguen </h5>
                 <a href="https://www.facebook.com/BelleLabuguen/" target="_blank" class="text-zinc-700 text-base hover:text-zinc-900 hover:underline"> @bellelabuguen </a>
@@ -41,8 +41,8 @@
             
             </div>
   
-           <a href="https://www.addu.edu.ph/" target="_blank">
-              <button class="bg-[#ff5151] hover:bg-red-500 text-white shadow-lg text-4xl font-bold rounded-full w-20 h-20 -bottom-1 right-2 relative self-center inset-x-[50px] inset-y-[290px]">
+            <a href="https://www.addu.edu.ph/" target="_blank">
+              <button class="bg-[#ff5151] hover:bg-red-500 text-white shadow-lg text-4xl font-bold rounded-full w-20 h-20 relative self-center inset-x-[50px] inset-y-[290px]">
                   + </p>
               </button>
             </a>
